--- a/website/src/style.css
+++ b/website/src/style.css
@@ -50,3 +50,9 @@ button:disabled {
   color: rgba(255, 255, 255, 0.5);
   cursor: not-allowed;
 }
+
+.box {
+  background-color: var(--main-color);
+  border-radius: var(--border-radius);
+  padding: 10px;
+}
